<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="3">
        <TextView
            android:text="@string/story_label"
            android:layout_margin="5dp"
            android:padding="0dp"/>
        <Spinner
            android:id="@+id/story_spinner"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:entries="@array/color_list"
            />
        <Switch
            android:layout_margin="5dp"
            android:id="@+id/story_switch"
            android:checked="true"/>
        <TextView
            android:text="@string/tree_label"
            android:layout_margin="5dp"
            android:padding="0dp"/>
        <Spinner
            android:id="@+id/tree_spinner"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:entries="@array/color_list"
            />
        <Switch
            android:layout_margin="5dp"
            android:id="@+id/tree_switch"
            android:checked="true"/>
        <TextView
            android:text="@string/spouse_label"
            android:layout_margin="5dp"
            android:padding="0dp"/>
        <Spinner
            android:id="@+id/spouse_spinner"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:entries="@array/color_list"
            />
        <Switch
            android:layout_margin="5dp"
            android:id="@+id/spouse_switch"
            android:checked="true"/>
    </GridLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/map_label"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:padding="0dp"/>
        <Spinner
            android:id="@+id/map_spinner"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:entries="@array/map_list"
            />

    </LinearLayout>
    <TextView
        android:id="@+id/resync_label"
        android:text="@string/resync_label"
        android:layout_margin="5dp"
        android:padding="0dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:clickable="true"/>
    <TextView
        android:id="@+id/log_out_label"
        android:text="@string/log_out_label"
        android:layout_margin="5dp"
        android:padding="0dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:clickable="true"/>

</LinearLayout>