<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="3">

        <TextView
            android:text="@string/firstName_label"
            android:layout_margin="5dp"
            android:padding="0dp"/>
        <TextView
            android:id="@+id/person_first"
            android:layout_margin="5dp"
            android:padding="0dp"/>
        <TextView
            android:text="@string/lastName_label"
            android:layout_margin="5dp"
            android:padding="0dp"/>
        <TextView
            android:id="@+id/person_last"
            android:layout_margin="5dp"
            android:padding="0dp"/>
        <TextView
            android:text="@string/gender_label"
            android:layout_margin="5dp"
            android:padding="0dp"/>
        <TextView
            android:id="@+id/person_gender"
            android:layout_margin="5dp"
            android:padding="0dp"/>

    </GridLayout>
    <ImageView
        android:id="@+id/show_events"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"/>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/event_recycler_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"/>
    <ImageView
        android:id="@+id/show_people"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"/>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/person_recycler_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"/>

</LinearLayout>



